<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/splash"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:layout_height="162dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"
        app:srcCompat="@drawable/icons8_umbrella_96"
        tools:layout_editor_absoluteX="108dp"
        tools:layout_editor_absoluteY="150dp"
        android:contentDescription="@string/icon" />

    <TextView
        android:layout_width="168dp"
        android:layout_height="34dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="149dp"
        android:fontFamily="serif"
        android:text="@string/weatherDisplay"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="108dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="27dp"
        android:text="@string/author"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="476dp" />

    <ProgressBar
        style="@android:style/Widget.Holo.Light.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="82dp"
        android:progressTint="@android:color/holo_blue_bright"
        tools:layout_editor_absoluteX="168dp"
        tools:layout_editor_absoluteY="395dp" />
</RelativeLayout>